# bdbc-nwb-packager

./: .gitignore  LICENSE  README.md  setup.cfg
bdbc_nwb_packager/: __init__.py  alignment.py  batch.py  command.py  daq.py  imaging.py  metadata.py  packaging.py  paths.py  rois.py  stdio.py  timebases.py  types.py  validation.py  videos.py
bdbc_nwb_packager/configure/: __init__.py  session.py  source.py  target.py
bdbc_nwb_packager/file_metadata/: __init__.py  common.py  devices.py  highlevel.py  recording.py  rois.py  session.py
bdbc_nwb_packager/logging/: __init__.py
bdbc_nwb_packager/packaging/: __init__.py  core.py  daq.py  dlc.py  imaging.py  procs.py  pupil.py  rois.py  trials.py  videos.py
bdbc_nwb_packager/tracking/: __init__.py  alignment.py  dlc.py  pupil.py  validation.py
bdbc_nwb_packager/trials/: __init__.py  common.py  configs.py  cued_lever_pull.py  io.py  mapping.py  spec.py
