[metadata]
name = bdbc-nwb-packager
version = 0.4.0
author = ["Keisuke Sehara", "Ryo Aoki", "Shoya Sugimoto"]
author_email = keisuke.sehara@gmail.com
description = A set of procedures for packaging BraiDyn-BC sessions as NWB HDF5 files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-nwb-packager
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-nwb-packager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    h5py
    pandas
    tifffile
    tqdm
    scikit-learn
    pynwb
    neuroconv[deeplabcut]
    bdbc-session-explorer==0.5

[options.entry_points]
console-scripts = 
    package-nwb = bdbc_nwb_packager.command:batch_package_nwb
    find-missing-nwb = bdbc_nwb_packager.command:find_missing_nwb

[flake8]
ignore =
    E501
    E221
    E712

